--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:mydb
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    ## dateTime 0 일시 null로 설정 , 기본 인코딩 utf-8, 타임존
+    url: jdbc:mysql://127.0.0.1:3307/pass_local?zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    username: pass_local_song
+    password: passsong1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 20
+
+  ## 배치 테이블 생성
+  batch:
+    jdbc:
+      initialize-schema: always
