--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,14 @@ spring:
     hikari:
       maximum-pool-size: 20
 
-  ## 배치 테이블 생성
   batch:
+    job:
+      enabled: false # 기본값 true는 Spring Boot 실행 시 등록되어 있는 Job들이 실행됩니다.
     jdbc:
+      # Batch에 사용되는 SQL 초기화 스크립트를 실행합니다. 임베디드인 경우에는 기본적으로 실행하는데, always 설정을 하면 임베디드 타입처럼 항상 활성화시킬 수 있습니다.
+      # 초기 수행한 이후에는 꺼두어도 됩니다.
       initialize-schema: always
+
+kakaotalk:
+  host: https://kapi.kakao.com
+  token: ACCESS_TOKEN
